--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,14 +6,15 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-        <activity android:name=".MainActivity" android:label="@string/app_name" android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        android:theme="@style/AppTheme"
+        android:screenOrientation="portrait">
+        <activity android:name=".MainActivity" android:label="@string/app_name" android:theme="@style/Theme.AppCompat.Light.NoActionBar" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DeviceMenuActivity" android:label="@string/app_name" android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity android:name=".DeviceMenuActivity" android:label="@string/app_name" android:theme="@style/Theme.AppCompat.Light.NoActionBar" android:screenOrientation="portrait" />
         <activity android:name=".MenuActivity" android:label="@string/app_name" android:launchMode="singleTop" >
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
@@ -21,7 +22,8 @@
             <meta-data android:name="android.app.searchable" android:resource="@xml/searchable"
                 android:value="MenuActivity" />
         </activity>
-        <activity android:name=".ScheduleActivity" android:label="@string/app_name" android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity android:name=".ScheduleActivity" android:label="@string/app_name" android:theme="@style/Theme.AppCompat.Light.NoActionBar" android:screenOrientation="portrait" />
+        <activity android:name=".PodInfo" android:label="@string/app_name" android:theme="@style/Theme.AppCompat.Light.NoActionBar" android:screenOrientation="portrait" />
     </application>
 
 </manifest>
